增加申请起始时间和申请用途描述

--- a/WebContent/AuditForm.html
+++ b/WebContent/AuditForm.html
@@ -69,17 +69,27 @@
 							<td>申请时间</td>
 							<td>2012/6/8</td>
 						</tr>
+
 						<tr>
 							<td>服务申请主题</td>
 							<td>申请一个服务器用于web业务</td>
 						</tr>
+
 						<tr>
-							<td>操作系统</td>
-							<td>CentOs5.5 server &mdash; 64 Bit</td>
+							<td>申请起始时间</td>
+							<td>2012/6/6-2012/6/19</td>
+						</tr>
+						<tr>
+							<td>申请用途</td>
+							<td>用于Sobey cmop业务</td>
 						</tr>
 						<tr>
 							<td>资源类型</td>
 							<td>测试/演示资源</td>
+						</tr>
+						<tr>
+							<td>操作系统</td>
+							<td>CentOs5.5 server &mdash; 64 Bit</td>
 						</tr>
 						<tr>
 							<td>计算机资源</td>
