--- a/WebContent/FeatureForm.html
+++ b/WebContent/FeatureForm.html
@@ -120,7 +120,21 @@
 									<div class="controls">
 										<input type="text" value="" class="input-large">
 									</div>
+								</div>
+								
+								<div class="control-group">
+									<label class="control-label">变更起始时间</label>
+									<div class="controls">
+										<input type="text" value="" class="input-medium">&mdash;
+										<input type="text" value="" class="input-medium">
+									</div>
+								</div>
 
+								<div class="control-group">
+									<label class="control-label">变更用途</label>
+									<div class="controls">
+										<textarea rows="3" class="input-xlarge"></textarea>
+									</div>
 								</div>
 
 								<div class="control-group">
@@ -570,12 +584,20 @@
 											<td>申请一个服务器用于web业务</td>
 										</tr>
 										<tr>
-											<td>操作系统</td>
-											<td>CentOs5.5 server &mdash; 64 Bit</td>
+											<td>变更起始时间</td>
+											<td>2012/6/6-2012/6/19</td>
+										</tr>
+										<tr>
+											<td>变更用途</td>
+											<td>用于Sobey cmop业务</td>
 										</tr>
 										<tr>
 											<td>资源类型</td>
 											<td>测试/演示资源</td>
+										</tr>
+										<tr>
+											<td>操作系统</td>
+											<td>CentOs5.5 server &mdash; 64 Bit</td>
 										</tr>
 										<tr>
 											<td>计算机资源</td>
