--- a/WebContent/SupportStorageForm.html
+++ b/WebContent/SupportStorageForm.html
@@ -122,6 +122,21 @@
 								</div>
 
 								<div class="control-group">
+									<label class="control-label">申请起始时间</label>
+									<div class="controls">
+										<input type="text" value="" class="input-medium">&mdash;
+										<input type="text" value="" class="input-medium">
+									</div>
+								</div>
+
+								<div class="control-group">
+									<label class="control-label">申请用途</label>
+									<div class="controls">
+										<textarea rows="3" class="input-xlarge"></textarea>
+									</div>
+								</div>
+
+								<div class="control-group">
 									<label class="control-label">资源类型</label>
 									<div class="controls">
 										<label class="radio"> <input type="radio" checked=""
@@ -283,6 +298,14 @@
 										<tr>
 											<td>存储资源申请主题</td>
 											<td>申请一个服务器用于web业务</td>
+										</tr>
+										<tr>
+											<td>申请起始时间</td>
+											<td>2012/6/6-2012/6/19</td>
+										</tr>
+										<tr>
+											<td>申请用途</td>
+											<td>用于Sobey cmop业务</td>
 										</tr>
 										<tr>
 											<td>资源类型</td>
