--- a/WebContent/SupportForm.html
+++ b/WebContent/SupportForm.html
@@ -6,6 +6,9 @@
 <!-- Le styles -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="jquery-ui/css/overcast/jquery-ui-1.8.21.custom.css"
+	rel="stylesheet">
+	
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
      <script src="js/html5.js"></script>
@@ -13,12 +16,18 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="jquery-ui/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script src="jquery-ui/js/jquery.ui.datepicker-zh-CN.js"></script>
 
 <script>
 	$(document).ready(function() {
 
 		//聚焦第一个输入框
 		$("#profile-tab").addClass("active");
+
+		//起始时间
+		$("#startTime").datepicker();
+		$("#endTime").datepicker();
 
 		//下一步按钮
 		$("#next_1").click(function() {
@@ -125,8 +134,8 @@
 								<div class="control-group">
 									<label class="control-label">申请起始时间</label>
 									<div class="controls">
-										<input type="text" value="" class="input-medium">&mdash;
-										<input type="text" value="" class="input-medium">
+										<input type="text" id="startTime" class="input-medium">&mdash;
+										<input type="text" id="endTime" class="input-medium">
 									</div>
 								</div>
 
