增加故障申请级别

--- a/WebContent/BugDetail.html
+++ b/WebContent/BugDetail.html
@@ -47,7 +47,10 @@
 
 				<strong>故障申报主题</strong>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;Help!Help!</p>
+				<hr />
 
+				<strong>优先级</strong>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;普通</p>
 				<hr />
 
 				<strong>故障详细描述</strong>
