--- a/WebContent/BugForm.html
+++ b/WebContent/BugForm.html
@@ -55,6 +55,20 @@
 					</div>
 
 					<div class="page-header"></div>
+					<div class="control-group">
+						<label for="focusedInput" class="control-label">优先级</label>
+						<div class="controls">
+							<select>
+								<option>低</option>
+								<option>普通</option>
+								<option>高</option>
+								<option>紧急</option>
+								<option>立刻</option>
+							</select>
+						</div>
+					</div>
+
+					<div class="page-header"></div>
 
 					<div class="control-group">
 						<label class="control-label">故障详细描述</label>
