--- a/WebContent/BugList.html
+++ b/WebContent/BugList.html
@@ -79,6 +79,7 @@
 			<thead>
 				<tr>
 					<th>故障申报主题</th>
+					<th>优先级</th>
 					<th>创建时间</th>
 					<th>操作</th>
 				</tr>
@@ -86,54 +87,65 @@
 			<tbody>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
+					<td>普通</td>
 					<td>2012-12-08</td>
 					<td><a class="btn" href="./BugDetail.html">查看</a></td>
 				</tr>
+				 
 				 
 			</tbody>
 		</table>
