--- a/WebContent/SupportStorageForm.html
+++ b/WebContent/SupportStorageForm.html
@@ -3,22 +3,27 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Sobey--云平台服务-存储资源申请</title>
+
 <!-- Le styles -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="jquery-ui/css/overcast/jquery-ui-1.8.21.custom.css" rel="stylesheet">
+
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
      <script src="js/html5.js"></script>
     <![endif]-->
-<!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="jquery-ui/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script src="jquery-ui/js/jquery.ui.datepicker-zh-CN.js"></script>
 
 <script>
 	$(document).ready(function() {
 
 		//聚焦第一个输入框
 		$("#profile-tab").addClass("active");
+		
 
 		//下一步按钮
 		$("#next_1").click(function() {
