--- a/WebContent/SupportStorageForm.html
+++ b/WebContent/SupportStorageForm.html
@@ -15,57 +15,19 @@
     <![endif]-->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/cmop.js"></script>
 <script src="jquery-ui/js/jquery-ui-1.8.21.custom.min.js"></script>
 <script src="jquery-ui/js/jquery.ui.datepicker-zh-CN.js"></script>
 
 <script>
 	$(document).ready(function() {
-
-		//聚焦第一个输入框
-		$("#profile-tab").addClass("active");
 		
-
-		//下一步按钮
-		$("#next_1").click(function() {
-			$('#myTab li:eq(1) a').tab('show'); // Select 2 tab (0-indexed)
-		});
-
-		$("#next_2").click(function() {
-			$('#myTab li:eq(2) a').tab('show');
-		});
-		$("#next_3").click(function() {
-			$('#myTab li:eq(3) a').tab('show');
-		});
-		$("#next_4").click(function() {
-			$('#myTab li:eq(4) a').tab('show');
-		});
-		$("#next_5").click(function() {
-			$('#myTab li:eq(5) a').tab('show');
-		});
-		$("#next_6").click(function() {
-			$('#myTab li:eq(6) a').tab('show');
-		});
-
-		//返回按钮
-		$("#back_1").click(function() {
-			$('#myTab li:eq(0) a').tab('show'); // Select 1 tab (0-indexed)
-		});
-		$("#back_2").click(function() {
-			$('#myTab li:eq(1) a').tab('show');
-		});
-		$("#back_3").click(function() {
-			$('#myTab li:eq(2) a').tab('show');
-		});
-		$("#back_4").click(function() {
-			$('#myTab li:eq(3) a').tab('show');
-		});
-		$("#back_5").click(function() {
-			$('#myTab li:eq(4) a').tab('show');
-		});
-		$("#back_6").click(function() {
-			$('#myTab li:eq(5) a').tab('show');
-		});
-
+		switchTab();
+		
+		//起始时间
+		$("#serviceStart").datepicker();
+		$("#serviceEnd").datepicker();
+	
 	});
 </script>
 
@@ -81,7 +43,6 @@
 			</h1>
 		</div>
 
-
 		<!-- Menu -->
 		<div id="menu">
 			<ul class="nav nav-tabs">
@@ -95,12 +56,12 @@
 		</div>
 
 		<div class="row">
+		
 			<!-- Guide -->
 			<div id="Guide" class="span2">
 				<div class="tabbable tabs-left">
 					<ul class="nav nav-tabs" id="myTab">
-						<li id="profile-tab"><a href="#profile1" data-toggle="tab">1.存储资源申请
-						</a></li>
+						<li class="active"><a href="#profile1" data-toggle="tab">1.存储资源申请</a></li>
 						<li><a href="#profile2" data-toggle="tab">2.存储资源</a></li>
 						<li><a href="#profile3" data-toggle="tab">3.提交</a></li>
 					</ul>
@@ -122,45 +83,48 @@
 								<div class="control-group">
 									<label class="control-label">存储资源申请主题</label>
 									<div class="controls">
-										<input type="text" value="" class="input-large">
+										<input type="text" id="title" name="title" value="" class="input-large" />
 									</div>
 								</div>
 
 								<div class="control-group">
 									<label class="control-label">申请起始时间</label>
 									<div class="controls">
-										<input type="text" value="" class="input-medium">&mdash;
-										<input type="text" value="" class="input-medium">
+										<input type="text" id="serviceStart" name="serviceStart" value="" class="input-medium" />&mdash;
+										<input type="text" id="serviceEnd" name="serviceEnd" value="" class="input-medium" />
 									</div>
 								</div>
 
 								<div class="control-group">
 									<label class="control-label">申请用途</label>
 									<div class="controls">
-										<textarea rows="3" class="input-xlarge"></textarea>
+										<textarea rows="3" id="usage" name="usage" class="input-xlarge"></textarea>
 									</div>
 								</div>
 
 								<div class="control-group">
 									<label class="control-label">资源类型</label>
 									<div class="controls">
-										<label class="radio"> <input type="radio" checked=""
-											value="" name="resourcesTypeRadios">生产资源
-										</label> <label class="radio"> <input type="radio" value=""
-											name="resourcesTypeRadios"> 测试/演示资源
-										</label> <label class="radio"> <input type="radio" value=""
-											name="resourcesTypeRadios"> 公测资源
+										<label class="radio"> 
+											<input type="radio"  value="生产资源" name="resourceType" />生产资源
+										</label> 
+										<label class="radio"> 
+											<input type="radio" value=" 测试/演示资源"	name="resourceType" /> 测试/演示资源
+										</label> 
+										<label class="radio"> 
+											<input type="radio" value="公测资源" name="resourceType" /> 公测资源
 										</label>
 									</div>
 								</div>
 							</fieldset>
+							
 							<div class="form-actions">
-								<a id="next_1" class="btn btn-primary">下一步</a>
+								<a id="nextStep" class="btn btn-primary">下一步</a>
 							</div>
 						</div>
 
 						<!-- 第2步 -->
-						<div class="tab-pane fade span7 offset1 " id="profile2">
+						<div class="tab-pane fade span7 offset1" id="profile2">
 
 							<fieldset>
 								<legend>存储资源</legend>
@@ -170,27 +134,32 @@
 									<div class="span3" id="dataStorage">
 										<fieldset>
 											<legend>
-												<input type="checkbox" name="diskTypeCheckbox" value="">
+												<input type="checkbox" id="dataStorageType" name="dataStorageType" value="数据存储">
 												<small>数据存储</small>
 											</legend>
 
 											<div class="control-group">
 												<label class="control-label">容量空间</label>
 												<div class="controls">
-													<label class="radio"> <input type="radio"
-														checked="checked" value="" name="dataStorageDiskRadios">
-														20GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 30GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 50GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 100GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 200GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" />其它 <input type="text"
-														value="" class="input-medium" />
+												
+													<label class="radio"> 
+														<input type="radio"	value="20" name="dataSorageSpace" /> 20GB
+													</label>
+													<label class="radio"> 
+														<input type="radio" value="30" name="dataSorageSpace" /> 30GB
+													</label> 
+													<label class="radio"> 
+														<input type="radio" value="50" name="dataSorageSpace" /> 50GB
+													</label> 
+													<label class="radio">
+														<input type="radio" value="100" name="dataSorageSpace" /> 100GB
+													</label> 
+													<label class="radio"> 
+														<input type="radio" value="200" name="dataSorageSpace" /> 200GB
+													</label> 
+													<label class="radio">
+														<input type="radio" value="" name="" />其它 
+														<input type="text" value="" class="input-medium" />
 													</label>
 												</div>
 
@@ -199,12 +168,11 @@
 												<div class="control-group">
 													<label class="control-label">Throughput（吞吐量）</label>
 													<div class="controls">
-														<label class="radio"> <input type="radio"
-															checked="" value="" name="dataStorageThroughputRadios">
-															50 Mbps以内
-														</label> <label class="radio"> <input type="radio"
-															value="" name="dataStorageThroughputRadios"> 50
-															Mbps以上
+														<label class="radio"> 
+															<input type="radio" value="1" name="dataStorageThroughput" /> 50 Mbps以内
+														</label> 
+														<label class="radio"> 
+															<input type="radio" value="2" name="dataStorageThroughput" /> 50 Mbps以上
 														</label>
 													</div>
 												</div>
@@ -212,10 +180,9 @@
 												<div class="page-header"></div>
 
 												<div class="control-group">
-													<label class="control-label">
-														IOPS（每秒进行读写（I/O）操作的次数）</label>
+													<label class="control-label">IOPS（每秒进行读写（I/O）操作的次数）</label>
 													<div class="controls">
-														<input type="text" value="" class="input-medium">
+														<input type="text" id="dataStorageIops" name="dataStorageIops" value="" class="input-medium" />
 													</div>
 												</div>
 
@@ -225,27 +192,31 @@
 									<div class="span3 offset1" id="businessStorage">
 										<fieldset>
 											<legend>
-												<input type="checkbox" name="diskTypeCheckbox" value="">
+												<input type="checkbox" id="businessStorageType" name="businessStorageType" value="业务存储">
 												<small>业务存储</small>
 											</legend>
 
 											<div class="control-group">
 												<label class="control-label">容量空间</label>
 												<div class="controls">
-													<label class="radio"> <input type="radio"
-														checked="checked" value="" name="dataStorageDiskRadios">
-														20GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 30GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 50GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 100GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" /> 200GB
-													</label> <label class="radio"> <input type="radio" value=""
-														name="dataStorageDiskRadios" />其它 <input type="text"
-														value="" class="input-medium" />
+													<label class="radio"> 
+														<input type="radio"	value="20" name="businessStorageSpace"> 20GB
+													</label>
+													<label class="radio"> 
+														<input type="radio" value="30" name="businessStorageSpace" /> 30GB
+													</label> 
+													<label class="radio"> 
+														<input type="radio" value="50" name="businessStorageSpace" /> 50GB
+													</label> 
+													<label class="radio">
+														<input type="radio" value="100" name="businessStorageSpace" /> 100GB
+													</label> 
+													<label class="radio"> 
+														<input type="radio" value="200" name="businessStorageSpace" /> 200GB
+													</label> 
+													<label class="radio">
+														<input type="radio" value="" name="businessStorageSpace" />其它 
+														<input type="text" value="" class="input-medium" />
 													</label>
 												</div>
 
@@ -254,12 +225,11 @@
 												<div class="control-group">
 													<label class="control-label">Throughput（吞吐量）</label>
 													<div class="controls">
-														<label class="radio"> <input type="radio"
-															checked="" value="" name="dataStorageThroughputRadios">
-															50 Mbps以内
-														</label> <label class="radio"> <input type="radio"
-															value="" name="dataStorageThroughputRadios"> 50
-															Mbps以上
+														<label class="radio"> 
+															<input type="radio" value="1" name="businessStorageThroughput" /> 50 Mbps以内
+														</label> 
+														<label class="radio"> 
+															<input type="radio" value="2" name="businessStorageThroughput" /> 50 Mbps以上
 														</label>
 													</div>
 												</div>
@@ -267,10 +237,9 @@
 												<div class="page-header"></div>
 
 												<div class="control-group">
-													<label class="control-label">
-														IOPS（每秒进行读写（I/O）操作的次数）</label>
+													<label class="control-label">IOPS（每秒进行读写（I/O）操作的次数）</label>
 													<div class="controls">
-														<input type="text" value="" class="input-medium">
+														<input type="text" id="businessStorageIops" name="businessStorageIops" value="" class="input-medium" />
 													</div>
 												</div>
 
@@ -282,17 +251,21 @@
 							</fieldset>
 
 							<div class="form-actions">
-								<a id="back_1" class="btn">返回</a> <a id="next_2"
-									class="btn btn-primary">下一步</a>
+								<a id="backStep" class="btn">返回</a> <a id="nextStep"
+									class="btn btn-primary step">下一步</a>
 							</div>
 						</div>
 
 						<!-- 第3步 -->
-						<div class="tab-pane fade span7 offset1 " id="profile3">
+						<div class="tab-pane fade span8 offset1 " id="profile3">
 							<fieldset>
 								<legend>存储资源申请详情</legend>
 
 								<table class="table table-bordered table-striped">
+									<colgroup>
+										<col class="span2">
+										<col class="span6">
+									</colgroup>
 									<thead>
 										<tr>
 											<th>Tag</th>
@@ -301,30 +274,28 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>存储资源申请主题</td>
-											<td>申请一个服务器用于web业务</td>
+											<td>申请主题</td>
+											<td id="td_title"></td>
 										</tr>
 										<tr>
-											<td>申请起始时间</td>
-											<td>2012/6/6-2012/6/19</td>
+											<td>起始时间</td>
+											<td id="td_time"></td>
 										</tr>
 										<tr>
 											<td>申请用途</td>
-											<td>用于Sobey cmop业务</td>
+											<td id="td_usage"></td>
 										</tr>
 										<tr>
 											<td>资源类型</td>
-											<td>测试/演示资源</td>
+											<td id="td_resourceType"></td>
 										</tr>
-										<tr>
+										<tr id="tr_dataStorage" style="display: none;">
 											<td>存储资源</td>
-											<td><code>存储类型:</code>数据存储.&nbsp; <code>容量空间:</code>200G.&nbsp;
-												<code>吞吐量:</code>50 Mbps以内.&nbsp; <code>IOPS:</code>100</td>
+											<td id="td_dataStorage"></td>
 										</tr>
-										<tr>
+										<tr id="tr_businessStorage" style="display: none;">
 											<td>存储资源</td>
-											<td><code>存储类型:</code>业务存储.&nbsp; <code>容量空间:</code>200G.&nbsp;
-												<code>吞吐量:</code>50 Mbps以内.&nbsp; <code>IOPS:</code>100</td>
+											<td id="td_businessStorage"></td>
 										</tr>
 										<tr>
 											<td>接入服务</td>
@@ -337,8 +308,8 @@
 
 							</fieldset>
 
-							<div class="form-actions ">
-								<a id="back_2" class="btn ">返回</a>
+							<div class="form-actions">
+								<a id="backStep" class="btn ">返回</a>
 								<button class="btn btn-success">保存修改</button>
 							</div>
 						</div>
@@ -348,12 +319,6 @@
 				</form>
 			</div>
 		</div>
-
-
-
-
-
-
 
 		<!-- Footer -->
 		<div class="page-header"></div>
