complete computer's javascript and JSP

--- a/WebContent/SupportJoinForm.html
+++ b/WebContent/SupportJoinForm.html
@@ -106,13 +106,13 @@
 									<label class="control-label">资源类型</label>
 									<div class="controls">
 										<label class="radio"> 
-											<input type="radio"  value="生产资源" name="resourceType" />生产资源
+											<input type="radio"  value="1" name="resourceType" />生产资源
 										</label> 
 										<label class="radio"> 
-											<input type="radio" value=" 测试/演示资源"	name="resourceType" /> 测试/演示资源
+											<input type="radio" value=" 2"	name="resourceType" /> 测试/演示资源
 										</label> 
 										<label class="radio"> 
-											<input type="radio" value="公测资源" name="resourceType" /> 公测资源
+											<input type="radio" value="3" name="resourceType" /> 公测资源
 										</label>
 									</div>
 								</div>
@@ -152,8 +152,8 @@
 							</fieldset>
 							
 							<div class="form-actions">
-								<a id="backStep" class="btn">返回</a> <a id="nextStep"
-									class="btn btn-primary">下一步</a>
+								<a id="backStep" class="btn">返回</a> 
+								<a id="nextStep" class="btn btn-primary">下一步</a>
 							</div>
 						</div>
 
