--- a/WebContent/SupportNetworkForm.html
+++ b/WebContent/SupportNetworkForm.html
@@ -19,6 +19,10 @@
 
 		//聚焦第一个输入框
 		$("#profile-tab").addClass("active");
+		
+$("a.step").click(function(){
+			
+		});		
 
 		//下一步按钮
 		$("#next_1").click(function() {
