--- a/WebContent/SupportStorageForm.html
+++ b/WebContent/SupportStorageForm.html
@@ -106,13 +106,13 @@
 									<label class="control-label">资源类型</label>
 									<div class="controls">
 										<label class="radio"> 
-											<input type="radio"  value="生产资源" name="resourceType" />生产资源
+											<input type="radio"  value="1" name="resourceType" />生产资源
 										</label> 
 										<label class="radio"> 
-											<input type="radio" value=" 测试/演示资源"	name="resourceType" /> 测试/演示资源
+											<input type="radio" value=" 2"	name="resourceType" /> 测试/演示资源
 										</label> 
 										<label class="radio"> 
-											<input type="radio" value="公测资源" name="resourceType" /> 公测资源
+											<input type="radio" value="3" name="resourceType" /> 公测资源
 										</label>
 									</div>
 								</div>
@@ -134,7 +134,7 @@
 									<div class="span3" id="dataStorage">
 										<fieldset>
 											<legend>
-												<input type="checkbox" id="dataStorageType" name="dataStorageType" value="数据存储">
+												<input type="checkbox" id="dataStorageType" name="dataStorageType" value="数据存储" />
 												<small>数据存储</small>
 											</legend>
 
@@ -192,7 +192,7 @@
 									<div class="span3 offset1" id="businessStorage">
 										<fieldset>
 											<legend>
-												<input type="checkbox" id="businessStorageType" name="businessStorageType" value="业务存储">
+												<input type="checkbox" id="businessStorageType" name="businessStorageType" value="业务存储" />
 												<small>业务存储</small>
 											</legend>
 
@@ -200,7 +200,7 @@
 												<label class="control-label">容量空间</label>
 												<div class="controls">
 													<label class="radio"> 
-														<input type="radio"	value="20" name="businessStorageSpace"> 20GB
+														<input type="radio"	value="20" name="businessStorageSpace" /> 20GB
 													</label>
 													<label class="radio"> 
 														<input type="radio" value="30" name="businessStorageSpace" /> 30GB
@@ -251,8 +251,8 @@
 							</fieldset>
 
 							<div class="form-actions">
-								<a id="backStep" class="btn">返回</a> <a id="nextStep"
-									class="btn btn-primary step">下一步</a>
+								<a id="backStep" class="btn">返回</a>
+								<a id="nextStep" class="btn btn-primary">下一步</a>
 							</div>
 						</div>
 
