complete support's javascript and JSP

--- a/WebContent/SupportNetworkForm.html
+++ b/WebContent/SupportNetworkForm.html
@@ -291,7 +291,7 @@
 											<td id="td_resourceType"></td>
 										</tr>
 										<tr>
-											<td>接入</td>
+											<td>网络接入</td>
 											<td id="td_network"></td>
 										</tr>
 										<tr>
