--- a/WebContent/BugList.html
+++ b/WebContent/BugList.html
@@ -52,12 +52,12 @@
 			<div class="row-fluid rowshow-grid">
 
 				<div class="span3">
-					<label class="control-label">主题:</label> <input type="text"
+					<label class="control-label">主题:</label> <input type="text" id="title" name="title"
 						placeholder="故障申报主题" class="input-medium">
 				</div>
 
 				<div class="span3">
-					<label class="control-label">创建日期:</label> <input type="text"
+					<label class="control-label">创建日期:</label> <input type="text" id="" name=""
 						placeholder="创建日期" class="input-medium">
 				</div>
 
@@ -81,7 +81,7 @@
 				<tr>
 					<th>故障申报主题</th>
 					<th>优先级</th>
-					<th>创建时间</th>
+					<th>创建日期</th>
 					<th>操作</th>
 				</tr>
 			</thead>
