--- a/WebContent/SupportJoinForm.html
+++ b/WebContent/SupportJoinForm.html
@@ -22,6 +22,9 @@
 <script>
 	$(document).ready(function() {
 		
+		//聚焦指定的Tab
+		$("#support-tab").addClass("active");
+		
 		switchTab();
 		
 		//起始时间
