--- a/WebContent/AuditDetail.html
+++ b/WebContent/AuditDetail.html
@@ -13,6 +13,12 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+	$(document).ready(function() {
+		//聚焦指定的Tab
+		$("#audit-tab").addClass("active");
+	});
+</script>
 </head>
 <body>
 
