--- a/WebContent/AuditList.html
+++ b/WebContent/AuditList.html
@@ -16,7 +16,7 @@
 
 <script>
 	$(document).ready(function() {
-		//聚焦第一个输入框
+		//聚焦指定的Tab
 		$("#audit-tab").addClass("active");
 	});
 </script>
@@ -84,7 +84,7 @@
 			<thead>
 				<tr>
 					<th>审核主题</th>
-					<th>创建时间</th>
+					<th>创建日期</th>
 					<th>审核状态</th>
 					<th>操作</th>
 				</tr>
