--- a/WebContent/FeatureDetail.html
+++ b/WebContent/FeatureDetail.html
@@ -13,6 +13,14 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+	$(document).ready(function() {
+		
+		//聚焦指定的Tab
+		$("#feature-tab").addClass("active");
+
+	});
+</script>
 </head>
 <body>
 
