--- a/WebContent/Regist.html
+++ b/WebContent/Regist.html
@@ -36,24 +36,25 @@
 
 		<div class="row">
 			<div class="span6 offset3">
+				<div class="page-header">
+					<p>
+						<h1>注册</h1>
+						 <a class="pull-right btn btn-success " href="./SignUp.html">	登录→ </a> 
+					 </p>
+				</div>
 				<form action="./Home.html" class="form-actions">
-					<fieldset>
-						<legend>
-							注册 <a class="pull-right btn btn-success" href="./SignUp.html">
-								登录→ </a>
-						</legend>
 
 						<div class="control-group">
 							<label for="focusedInput" class="control-label">公司邮箱</label>
 							<div class="controls">
-								<input type="text" id="email" placeholder="Email" class="">
+								<input type="text" id="email" name="email" placeholder="Email" class="">
 							</div>
 						</div>
 
 						<div class="control-group">
 							<label for="focusedInput" class="control-label">密码</label>
 							<div class="controls">
-								<input type="password" id="password" placeholder="Password"
+								<input type="password" id="password" name="password" placeholder="Password"
 									class="">
 							</div>
 						</div>
@@ -69,7 +70,7 @@
 						<div class="control-group">
 							<label for="focusedInput" class="control-label">姓名</label>
 							<div class="controls">
-								<input type="text" id="name" placeholder="真实姓名" class="">
+								<input type="text" id="name" name="name" placeholder="真实姓名" class="">
 							</div>
 						</div>
 
@@ -92,7 +93,6 @@
 							<a class="btn" href="./Login.html">取消</a>
 						</div>
 
-					</fieldset>
 				</form>
 			</div>
 		</div>
