--- a/WebContent/SupportComputeForm.html
+++ b/WebContent/SupportComputeForm.html
@@ -20,7 +20,10 @@
 
 <script>
 	$(document).ready(function() {
-
+		
+		//聚焦指定的Tab
+		$("#support-tab").addClass("active");
+		
 		switchTab();
 		
 		//起始时间
