--- a/WebContent/SupportDetail.html
+++ b/WebContent/SupportDetail.html
@@ -13,6 +13,15 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script type="text/javascript">
+
+	$(document).ready(function() {
+		//聚焦指定的Tab
+		$("#support-tab").addClass("active");
+	
+	});
+
+</script>
 </head>
 <body>
 
