--- a/WebContent/SupportNetworkForm.html
+++ b/WebContent/SupportNetworkForm.html
@@ -21,6 +21,9 @@
 <script>
 	$(document).ready(function() {
 		
+		//聚焦指定的Tab
+		$("#support-tab").addClass("active");
+		
 		switchTab();
 		
 		//起始时间
