去除操作按钮的样式,只用文字显示以便table更紧凑.

--- a/WebContent/BugList.html
+++ b/WebContent/BugList.html
@@ -90,61 +90,61 @@
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>普通</td>
 					<td>2012-12-08</td>
-					<td><a class="btn" href="./BugDetail.html">查看</a></td>
+					<td><a  href="./BugDetail.html">查看</a></td>
 				</tr>
 				 
 				 
@@ -167,7 +167,6 @@
 		</div>
 
 		<!-- Footer -->
-		<div class="page-header"></div>
 		<footer class="footer">
 		<div class="row show-grid">
 			<div class="span4">Copyright &copy; 2005-2012</div>
