--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -146,8 +146,8 @@
 							<td>2012-12-08</td>
 							<td><span class="label label-important">待审核</span></td>
 							<td>
-								<a class="btn" href="./SupportDetail.html">查看</a> 
-								<a class="btn btn-primary" href="./SupportForm.html">修改</a>
+								<a  href="./SupportDetail.html">查看</a> 
+								<a  href="./SupportForm.html">修改</a>
 							</td>
 						</tr>
 						<tr>
@@ -155,8 +155,8 @@
 							<td>2012-12-08</td>
 							<td><span class="label label-warning">审核中</span></td>
 							<td>
-								<a class="btn" href="./SupportDetail.html">查看</a>
-								<a class="btn btn-primary" href="./SupportForm.html">修改</a>
+								<a  href="./SupportDetail.html">查看</a>
+								<a  href="./SupportForm.html">修改</a>
 							</td>
 						</tr>
 						<tr>
@@ -164,9 +164,9 @@
 							<td>2012-12-08</td>
 							<td><span class="label label-success">已审核</span></td>
 							<td>
-								<a class="btn" href="./SupportDetail.html">查看</a> 
-								<a class="btn btn-primary" href="./SupportDetail.html">修改</a> 
-								<a class="btn btn-info" href="./FeatureForm.html">变更</a>
+								<a  href="./SupportDetail.html">查看</a> 
+								<a  href="./SupportDetail.html">修改</a> 
+								<a  href="./FeatureForm.html">变更</a>
 							</td>
 						</tr>
 						<tr>
@@ -174,8 +174,8 @@
 							<td>2012-12-08</td>
 							<td><span class="label label-important">待审核</span></td>
 							<td>
-								<a class="btn" href="./SupportDetail.html">查看</a> 
-								<a class="btn btn-primary" href="./SupportForm.html">修改</a>
+								<a  href="./SupportDetail.html">查看</a> 
+								<a  href="./SupportForm.html">修改</a>
 							</td>
 						</tr>
 						<tr>
@@ -183,8 +183,8 @@
 							<td>2012-12-08</td>
 							<td><span class="label label-important">待审核</span></td>
 							<td>
-								<a class="btn" href="./SupportDetail.html">查看</a> 
-								<a class="btn btn-primary" href="./SupportForm.html">修改</a>
+								<a  href="./SupportDetail.html">查看</a> 
+								<a  href="./SupportForm.html">修改</a>
 							</td>
 						</tr>
 
@@ -208,7 +208,6 @@
 
 
 		<!-- Footer -->
-		<div class="page-header"></div>
 		<footer class="footer">
 		<div class="row show-grid">
 			<div class="span4">Copyright &copy; 2005-2012</div>
