--- a/WebContent/AuditList.html
+++ b/WebContent/AuditList.html
@@ -94,61 +94,61 @@
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn btn-primary" href="./AuditForm.html">审核</a>&nbsp;</td>
+					<td><a  href="./AuditForm.html">审核</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./AuditDetail.html">查看</a>&nbsp;</td>
+					<td><a  href="./AuditDetail.html">查看</a>&nbsp;</td>
 				</tr>
 				 
 
@@ -169,7 +169,6 @@
 			</div>
 		</div>
 		<!-- Footer -->
-		<div class="page-header"></div>
 		<footer class="footer">
 		<div class="row show-grid">
 			<div class="span4">Copyright &copy; 2005-2012</div>
