--- a/WebContent/FeatureList.html
+++ b/WebContent/FeatureList.html
@@ -53,7 +53,7 @@
 
 				<div class="span3">
 					<label class="control-label">主题:</label> 
-					<input type="text" id="title" name="title"	placeholder="服务变更主题" class="input-medium" />
+					<input type="text" id="title" name="title"	placeholder="变更主题" class="input-medium" />
 				</div>
 
 				<div class="span3">
@@ -100,58 +100,58 @@
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-warning">审核中</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-success">已审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a> <a
-						class="btn btn-info" href="./FeatureForm.html">变更</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a> <a
+						 href="./FeatureForm.html">变更</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 				<tr>
 					<td>liukai</td>
 					<td>2012-12-08</td>
 					<td><span class="label label-important">待审核</span></td>
-					<td><a class="btn" href="./FeatureDetail.html">查看</a> <a
-						class="btn btn-primary" href="./FeatureForm.html">修改</a></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
 				</tr>
 
 
@@ -173,7 +173,6 @@
 		</div>
 		<!-- Footer -->
 
-		<div class="page-header"></div>
 		<footer class="footer">
 		<div class="row show-grid">
 			<div class="span4">Copyright &copy; 2005-2012</div>
