更改子资源申请显示顺序.调整向导和我的资源大小.

--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -49,10 +49,10 @@
 		<div class="row">
 			<div id="leftbar" class="span2">
 				<ul class="nav nav-list">
-					<li><a href="./SupportNetworkForm.html">网络资源申请</a></li>
 					<li><a href="./SupportComputeForm.html">计算资源申请</a></li>
 					<li><a href="./SupportStorageForm.html">存储资源申请</a></li>
 					<li><a href="./SupportJoinForm.html">接入服务申请</a></li>
+					<li><a href="./SupportNetworkForm.html">网络资源申请</a></li>
 					<li class="divider"></li>
 				</ul>
 			</div>
@@ -68,9 +68,6 @@
 
 							<a class="btn btn-info" href="./SupportForm.html">服务申请</a>
 
-							<p class="page-header">
-								<strong>Note:</strong> 创建服务成功后,可通过点击详情按钮查看申请的审核进度.
-							</p>
 						</fieldset>
 
 					</div>
@@ -79,16 +76,17 @@
 						<div class="row">
 							<fieldset>
 								<legend>我的资源</legend>
-								<div class="span2 page-header">
+								<div class="span2">
 									<a href="#">4 运行实例</a>
 								</div>
-								<div class="span2 page-header">
+								<div class="span2">
 									<a href="#">9 网络资源</a>
 								</div>
-								<div class="span2 page-header">
+								<hr/>
+								<div class="span2">
 									<a href="#">11 EBS</a>
 								</div>
-								<div class="span2 page-header">
+								<div class="span2">
 									<a href="#">2 接入资源</a>
 								</div>
 							</fieldset>
