为查询的form添加well-small 样式使其更紧凑.

--- a/WebContent/AuditList.html
+++ b/WebContent/AuditList.html
@@ -46,7 +46,7 @@
 		</div>
 
 		<!-- Search -->
-		<form class="well form-search" action="./AuditList.html">
+		<form class="well well-small form-search" action="./AuditList.html">
 
 			<div class="row-fluid show-grid">
 
