--- a/WebContent/BugList.html
+++ b/WebContent/BugList.html
@@ -47,7 +47,7 @@
 		</div>
 
 		<!-- Search -->
-		<form class="well form-search" action="./FeatureList.html">
+		<form class="well well-small form-search" action="./FeatureList.html">
 
 			<div class="row-fluid rowshow-grid">
 
