--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -96,7 +96,7 @@
 				</div>
 
 				<!-- Search -->
-				<form class="well form-search" action="./SupportList.html">
+				<form class="well well-small form-search" action="./SupportList.html">
 
 					<div class="row-fluid show-grid">
 
