--- a/WebContent/FeatureList.html
+++ b/WebContent/FeatureList.html
@@ -47,7 +47,7 @@
 
 
 		<!-- Search -->
-		<form class="well form-search" action="./FeatureList.html">
+		<form class="well well-small form-search" action="./FeatureList.html">
 
 			<div class="row-fluid show-grid">
 
