--- a/WebContent/SupportNetworkForm.html
+++ b/WebContent/SupportNetworkForm.html
@@ -96,7 +96,7 @@
 								<div class="control-group">
 									<label class="control-label">申请用途</label>
 									<div class="controls">
-										<textarea rows="3" id="usage" name="usage" class="input-xlarge"></textarea>
+										<textarea rows="2" id="usage" name="usage" class="input-xlarge"></textarea>
 									</div>
 								</div>
 
@@ -116,13 +116,14 @@
 								</div>
 							</fieldset>
 							
-							<div class="form-actions">
-								<a id="nextStep" class="btn btn-primary">下一步</a>
+							<hr />
+							<div>
+								<a id="nextStep" class="btn btn-info">下一步</a>
 							</div>
 						</div>
 
 						<!-- 第2步 -->
-						<div class="tab-pane fade span6 offset1" id="profile2">
+						<div class="tab-pane fade span6 offset1 " id="profile2">
 
 							<fieldset>
 								<legend>网络资源</legend>
@@ -141,7 +142,7 @@
 
 								</div>
 
-								<div class="page-header"></div>
+								<hr>
 
 								<div class="control-group ">
 									<label class="control-label">接入速率</label>
@@ -167,7 +168,7 @@
 									</div>
 								</div>
 
-								<div class="page-header"></div>
+								<hr>
 
 								<div class="control-group">
 									<label class="control-label">开放端口</label>
@@ -199,18 +200,18 @@
 									</div>
 								</div>
 
-								<div class="page-header"></div>
+								<hr>
 
 								<div class="control-group ">
 									<label class="control-label">公网IP</label>
 
 									<div class="controls">
-										<textarea rows="3" id="networkOutIp" name="networkOutIp"  class="input-xlarge"></textarea>
+										<textarea rows="2" id="networkOutIp" name="networkOutIp"  class="input-xlarge"></textarea>
 									</div>
 
 								</div>
 
-								<div class="page-header"></div>
+								<hr>
 
 								<label class="control-label">域名解析</label>
 
@@ -252,10 +253,10 @@
 								</table>
 
 							</fieldset>
-
-							<div class="form-actions">
+							<hr/>
+							<div>
 								<a id="backStep" class="btn">返回</a>
-								<a id="nextStep" class="btn btn-primary">下一步</a>
+								<a id="nextStep" class="btn btn-info">下一步</a>
 							</div>
 
 						</div>
@@ -319,9 +320,10 @@
 
 							</fieldset>
 
-							<div class="form-actions">
+						<hr/>
+							<div>
 								<a id="backStep" class="btn ">返回</a>
-								<button class="btn btn-success">保存修改</button>
+								<button class="btn btn-primary">保存修改</button>
 							</div>
 						</div>
 
@@ -332,7 +334,6 @@
 		</div>
 
 		<!-- Footer -->
-		<div class="page-header"></div>
 		<footer class="footer">
 		<div class="row show-grid">
 			<div class="span4">Copyright &copy; 2005-2012</div>
