重新用table方式来显示故障申请详细信息.

--- a/WebContent/BugForm.html
+++ b/WebContent/BugForm.html
@@ -49,9 +49,8 @@
 			<div class="tab-content">
 				<div class=" span6 offset3">
 
-					<div class="page-header">
-						<h1>故障申报</h1>
-					</div>
+						<h3>故障申报</h3>
+						<hr>
 
 					<div class="control-group">
 						<label class="control-label">故障申报主题</label>
@@ -60,7 +59,7 @@
 						</div>
 					</div>
 
-					<div class="page-header"></div>
+					<hr>
 					<div class="control-group">
 						<label for="focusedInput" class="control-label">优先级</label>
 						<div class="controls">
@@ -74,16 +73,16 @@
 						</div>
 					</div>
 
-					<div class="page-header"></div>
+					<hr>
 
 					<div class="control-group">
 						<label class="control-label">故障详细描述</label>
 						<div class="controls">
-							<textarea rows="3" id="bug_info" class="input-xlarge"></textarea>
+							<textarea rows="2" id="bug_info" class="input-xlarge"></textarea>
 						</div>
 					</div>
-
-					<div class="form-actions">
+					<hr>
+					<div>
 						<button class="btn btn-primary" type="submit">保存修改</button>
 						<button class="btn">取消</button>
 					</div>
@@ -95,7 +94,6 @@
 
 
 		<!-- Footer -->
-		<div class="page-header"></div>
 		<footer class="footer">
 		<div class="row show-grid">
 			<div class="span4">Copyright &copy; 2005-2012</div>
