--- a/WebContent/FeatureList.html
+++ b/WebContent/FeatureList.html
@@ -153,6 +153,20 @@
 					<td><a  href="./FeatureDetail.html">查看</a> <a
 						 href="./FeatureForm.html">修改</a></td>
 				</tr>
+				<tr>
+					<td>liukai</td>
+					<td>2012-12-08</td>
+					<td><span class="label label-important">待审核</span></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
+				</tr>
+				<tr>
+					<td>liukai</td>
+					<td>2012-12-08</td>
+					<td><span class="label label-important">待审核</span></td>
+					<td><a  href="./FeatureDetail.html">查看</a> <a
+						 href="./FeatureForm.html">修改</a></td>
+				</tr>
 
 
 			</tbody>
