--- a/WebContent/BugDetail.html
+++ b/WebContent/BugDetail.html
@@ -46,35 +46,53 @@
 
 		<div class="row">
 			<div class="span6 offset3">
+			
+			
+			<table class="table table-bordered table-striped">
+									<colgroup>
+										<col class="span2">
+										<col class="span6">
+									</colgroup>
+									<thead>
+										<tr>
+											<th>Tag</th>
+											<th>Description</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>故障申报主题</td>
+											<td>Help!Help!</td>
+										</tr>
+										<tr>
+											<td>优先级</td>
+											<td>普通</td>
+										</tr>
+										<tr>
+											<td>故障详细描述</td>
+											<td>
+												Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
+												Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
+												Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
+												Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
+											</td>
+										</tr>
+										<tr>
+											<td>申报时间</td>
+											<td>2012/6/12</td>
+										</tr>
+										<tr>
+											<td>返回信息</td>
+											<td>这个问题已经解决</td>
+										</tr>
+									</tbody>
+								</table>
 
-				<div class="page-header">
-					<h1>故障申报详情</h1>
-				</div>
 
-				<strong>故障申报主题</strong>
-				<p>&nbsp;&nbsp;&nbsp;&nbsp;Help!Help!</p>
+
+
 				<hr />
-
-				<strong>优先级</strong>
-				<p>&nbsp;&nbsp;&nbsp;&nbsp;普通</p>
-				<hr />
-
-				<strong>故障详细描述</strong>
-				<p>&nbsp;&nbsp;&nbsp;&nbsp;
-					Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
-					Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
-					Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
-					Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!Help!
-				</p>
-
-				<hr />
-
-				<strong>申报时间</strong>
-				<p>&nbsp;&nbsp;&nbsp;&nbsp;2012/6/12</p>
-
-				<hr />
-
-				<button class="btn btn-large" onclick="javascript :history.back(-1)">返回</button>
+				<button class="btn" onclick="javascript :history.back(-1)">返回</button>
 			</div>
 
 		</div>
