--- a/WebContent/BugList.html
+++ b/WebContent/BugList.html
@@ -46,6 +46,20 @@
 			</ul>
 		</div>
 
+		<a class="btn btn-info pager" href="./BugForm.html">故障申报</a>
+<div class="modal hide" id="myModal">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3>Modal header</h3>
+    </div>
+    <div class="modal-body">
+    <p>One fine body…</p>
+    </div>
+    <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-primary">Save changes</a>
+    </div>
+    </div>
 		<!-- Search -->
 		<form class="well well-small form-search" action="./FeatureList.html">
 
@@ -68,7 +82,7 @@
 			</div>
 		</form>
 
-		<a class="btn btn-info pager" href="./BugForm.html">故障申报</a>
+		
 
 		<table class="table table-striped table-bordered table-condensed">
 			<colgroup>
