增加ECS和PM的页面

--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -53,8 +53,8 @@
 		       <ul class="nav nav-list">
 		         <li class="divider"></li>
 		          <li class="nav-header">计算资源</li>
-		          <li><a href="./SupportComputeForm.html"><i class="icon-book"></i> PM</a></li>
-		          <li><a href="#"><i class="icon-pencil"></i> ECS</a></li>
+		          <li><a href="./SupportPMForm.html"><i class="icon-book"></i>ECS</a></li>
+		          <li><a href="./SupportECSForm.html"><i class="icon-pencil"></i>PM</a></li>
 		            <li class="divider"></li>
 		          <li class="nav-header">存储资源</li>
 		          <li><a href="./SupportEBSForm.html"><i class="icon-user"></i> EBS</a></li>
@@ -66,13 +66,6 @@
 		        
 		        </ul>
       
-				<!-- 	<ul class="nav nav-list">
-					<li><a href="./SupportComputeForm.html">计算资源申请</a></li>
-					<li><a href="./SupportStorageForm.html">存储资源申请</a></li>
-					<li><a href="./SupportJoinForm.html">接入服务申请</a></li>
-					<li><a href="./SupportNetworkForm.html">网络资源申请</a></li>
-					<li class="divider"></li>
-				</ul> -->
 			</div>
 
 			<div id="main" class="span10">
