更改审核页面中,申请详情的显示方式.

--- a/WebContent/SupportList.html
+++ b/WebContent/SupportList.html
@@ -53,8 +53,8 @@
 		       <ul class="nav nav-list">
 		         <li class="divider"></li>
 		          <li class="nav-header">计算资源</li>
-		          <li><a href="./SupportPMForm.html"><i class="icon-book"></i>ECS</a></li>
-		          <li><a href="./SupportECSForm.html"><i class="icon-pencil"></i>PM</a></li>
+		          <li><a href="./SupportPMForm.html"><i class="icon-book"></i>PM</a></li>
+		          <li><a href="./SupportECSForm.html"><i class="icon-pencil"></i>ECS</a></li>
 		            <li class="divider"></li>
 		          <li class="nav-header">存储资源</li>
 		          <li><a href="./SupportEBSForm.html"><i class="icon-user"></i> EBS</a></li>
