--- a/WebContent/SupportPMForm.html
+++ b/WebContent/SupportPMForm.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Sobey--云平台服务-ECS资源申请</title>
+<title>Sobey--云平台服务-PM资源申请</title>
 <!-- Le styles -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -70,8 +70,8 @@
 			<div id="Guide" class="span2">
 				<div class="tabbable tabs-left">
 					<ul class="nav nav-tabs" id="myTab">
-						<li class="active"><a href="#profile1" data-toggle="tab">1.ECS资源申请</a></li>
-						<li><a href="#profile2" data-toggle="tab">2.ECS资源</a></li>
+						<li class="active"><a href="#profile1" data-toggle="tab">1.PM资源申请</a></li>
+						<li><a href="#profile2" data-toggle="tab">2.PM资源</a></li>
 						<li><a href="#profile3" data-toggle="tab">3.提交</a></li>
 					</ul>
 				</div>
@@ -79,7 +79,7 @@
 
 			<div id="main" class="span10">
 
-				<form action="./SupportList.html">
+				<form action="./SupportList.html" class="form-horizontal">
 				<!-- 操作系统ID -->
 				<input type="hidden" id="osType" name="osType" value="" />
 
@@ -88,7 +88,7 @@
 						<!-- 第1步 -->
 						<div class="tab-pane fade in active span6 " id="profile1">
 							<fieldset>
-								<legend >ECS资源申请</legend>
+								<legend >PM资源申请</legend>
 								
 								<div class="control-group">
 									<label class="control-label">资源类型</label>
@@ -134,7 +134,7 @@
 						<div class="tab-pane fade span8" id="profile2" >
 
 								<fieldset>
-								<legend>选择ECS资源</legend>
+								<legend>选择PM资源</legend>
 							
 								<div style="height: 25em;overflow:auto">
 								<table class="table" style="height: 50">
@@ -364,9 +364,9 @@
 
 
 						<!-- 第3步 -->
-						<div class="tab-pane fade span8 offset1 " id="profile3">
+						<div class="tab-pane fade span8" id="profile3">
 							<fieldset>
-								<legend>ECS资源申请详情</legend>
+								<legend>PM资源申请详情</legend>
 								<table class="table table-bordered table-striped">
 									<colgroup>
 										<col class="span2">
