--- a/WebContent/BugForm.html
+++ b/WebContent/BugForm.html
@@ -44,7 +44,7 @@
 		</div>
 
 
-		<form action="./BugList.html">
+		<form action="./BugList.html" class="form-horizontal">
 
 			<div class="tab-content">
 				<div class=" span6 offset3">
@@ -59,7 +59,6 @@
 						</div>
 					</div>
 
-					<hr>
 					<div class="control-group">
 						<label for="focusedInput" class="control-label">优先级</label>
 						<div class="controls">
@@ -73,7 +72,6 @@
 						</div>
 					</div>
 
-					<hr>
 
 					<div class="control-group">
 						<label class="control-label">故障详细描述</label>
